@@ -41,5 +41,6 @@ cells. For example:
 * `delimiter` - The character used to separate fields. By default,
    DSV format uses a pipe (`|`), and CSV uses a comma (`,`).
 * `class` - A CSS class for the table html element.
-* `header` - Set to "no" to make a table without a header. By default,
-  the first data line is used as the table header.
+* `header` - By default, or if set to "row", the first data line is used
+  as the table header. Set it to "no" to make a table without a header, or
+  "column" to make the first column be the header.
