@@ -24,3 +24,8 @@ Here is the links to the patch and to a patched version of the plugin :
 I hope this might be intresting for some ikiwiki user's.
 
 --[[AlexandreDupas]]
+
+> Thanks for the patch, I've merged it in.
+> (Just FYI, in future, I recommend using a unified diff. Also, not
+> renaming variables that don't really need to be renamed makes your patch
+> easier to apply.) --[[Joey]]
