@@ -3,3 +3,5 @@ Tables support a header row or no header, but do not support a header column.
 > I have proposed a patch to the table plugin that enable such behaviour: [[table/discussion|plugins/table/discussion]].
 >
 > -- [[AlexandreDupas]]
+
+>> [applied|done]]
